--- a/H10.md
+++ b/H10.md
@@ -23,7 +23,7 @@ Aloitin harjoituksen asentamalla virtualenv-työkalun komenoilla:
     $ sudo apt-get update
     $ sudo apt-get -y install virtualenv
     
-Seuraavaksi loin uuden virtuaaliympäristön ja liitin siihen viimeisimmät Python paketit komennolla:
+Seuraavaksi loin uuden kansion virtuaaliympäristön ja liitin siihen viimeisimmät Python paketit komennolla:
 
     $ virtualenv --system-site-packages -p python3 env/
     
@@ -54,7 +54,7 @@ Tarkistin tiedoston onnistuneen luomisen komennolla:
     
 ![image](https://user-images.githubusercontent.com/106889187/221127433-86dbbb8f-37db-479f-aa22-4b2e9f13e2d1.png)
 
-Seuraavaksi asensin Djangon tekstitiedoston avulla komennolla:
+Seuraavaksi asensin Djangon hyödyntäen tekstitiedostoa komennolla:
 
     $ pip install -r requirements.txt
 
@@ -71,13 +71,13 @@ Lopuksi tarkistin Djangon asentumisen ja version komennolla:
 
 ## DJANGO (9:21 -- 27.2.2023)
 
-Aluksi siirryin aikaisemmin luotoon virtuaaliympäristöön komennoll:
+Aluksi siirryin aikaisemmin luotuun virtuaaliympäristöön komennolla:
 
     $ source env/bin/activate
 
 ![image](https://user-images.githubusercontent.com/106889187/221499957-02dc91dc-b5e1-430d-85c9-e2b4df316b8c.png)
  
-Ja alotin uuden projektin komennolla:
+Ja aloitin uuden projektin komennolla:
 
     $ django-admin startproject idea
     
@@ -97,7 +97,7 @@ Tarkistetaan ensin, että kehitysserveri toimii selaimessa.
 
 ![image](https://user-images.githubusercontent.com/106889187/221501460-59d71fbd-17c0-4ec7-a0d6-3e320e30b1bd.png)
 
-Kehitysserveri on tominnassa. Päivitin seuraavaksi tietokannat ensin sulkemalla serverin CONTROL-C ja sen jälkeen komennoilla:
+Kehitysserveri on tominnassa. Päivitin seuraavaksi tietokannat ensin sulkemalla serverin komennolla 'CONTROL-C' ja sen jälkeen komennoilla:
 
     $ ./manage.py makemigrations
     $ ./manage.py migrate
@@ -105,11 +105,11 @@ Kehitysserveri on tominnassa. Päivitin seuraavaksi tietokannat ensin sulkemalla
 ![image](https://user-images.githubusercontent.com/106889187/221502087-a485b27f-e687-4dd5-87c9-9fcbc52a40b1.png)
 
 
-Seuraavaksi asensin pwgen-salasana ohjelman nopeuttamaan uusien käyttäjien luontia komennolla:
+Seuraavaksi asensin pwgen-salasanageneraattorin nopeuttamaan uusien käyttäjien luontia komennolla:
 
     $ sudo apt-get install pwgen
       
- Loin uuden satunnaisen salasanan komennolla:
+ Loin yhden uuden satunnaisen ja 20-merkkisen salasanan komennolla:
  
     $  pwgen -s 20 1
 
@@ -123,7 +123,7 @@ Seuraavaksi käynnistin kehitysserverin uudestaan komennolla:
 
     $ ./manage.py runserver
     
-Ja siirryin ylläpitäjän sivuille lisäämällä serverin osoitteeseen loppuun '/admin'.
+Ja siirryin ylläpitäjän sivuille lisäämällä osoitteeseen loppuun '/admin'.
 
 ![image](https://user-images.githubusercontent.com/106889187/221504964-894fd8c3-87d4-4599-95d9-8c46c46f657f.png)
 
@@ -139,7 +139,7 @@ Onnistuin kirjautumaan sisään uudella käyttäjällä '/admin' osoitteen kautt
 
 ## Tietokanta (10:02 -- 27.2.2023)
 
-Aloitin tietokannan luonnin virtuaaliympäristöön komennolla:
+Aloitin tietokannan luomisen virtuaaliympäristöön luomalla kansion 'students' komennolla:
 
     $ ./manage.py startapp students
     
@@ -151,11 +151,11 @@ Tämän jälkeen avasin micro-editorilla 'settings.py' tiedoston  komennolla:
  
  ![image](https://user-images.githubusercontent.com/106889187/221513105-48cfdd83-3533-4fb7-b51c-5e02a1e90cdf.png)
 
-Seuraavaksi siirryin lisäämän malleja tietokannalle micro-editorilla komenolla:
+Seuraavaksi siirryin lisäämän malleja tietokannalle käyttäen micro-editoria komenolla:
 
     $ micro students/models.py
  
-Lisäsin luokan 'student', joka sisältää muuttujat 'name', 'age' ja 'language'.
+Lisäsin luokan 'student', joka sisältää attribuutit 'name', 'age' ja 'language'.
 
 ![image](https://user-images.githubusercontent.com/106889187/221525431-bdb4b92c-fb76-4754-b43a-314df440eed4.png)
 
@@ -170,7 +170,7 @@ Tämän jälkeen päivitin tietokannat komennoilla:
     
   
  
- Seuraavaksi rekisteröin tietokannan muokkaamalla 'students/admin.py' tiedostoa, käyttäen micro-editoria komennolla:
+ Seuraavaksi rekisteröin tietokannan muokkaamalla 'students/admin.py' tiedostoa käyttäen micro-editoria komennolla:
  
     $ micro students/admin.py
     
@@ -185,11 +185,11 @@ Tämän jälkeen päivitin tietokannat komennoilla:
 
 
 
- Seuraavaksi tarkistin uuden tietokannan tomimivuuden ja muokattavuuden ensiksi käynnistämällä kehitysserverin komennolla:
+ Seuraavaksi tarkistin uuden tietokannan tomimivuuden ja muokattavuuden selaimessa käyttäjällä 'red2' ensiksi käynnistämällä kehitysserverin komennolla:
  
     $ ./manage.py runserver
  
-Ja siirymällä kirjautumaan admin-käyttäjänä selaimessa serverin osoitteessa:
+Ja siirtymällä kirjautumaan osoitteessa:
 
     http://127.0.0.1:8000/admin/
   
@@ -218,7 +218,7 @@ Tarkistin vielä kehitysserverissä muutosten toimivuuden ja oppilaat listautuiv
 
  ## Lopuksi 
  
- Tässä harjoituksessa loin tietokannan, missä oli weppiliittymä hyödyntäen Djangon kehityspalvelinta
+ Tässä harjoituksessa loin tietokannan, missä oli weppiliittymä hyödyntäen Djangon kehityspalvelinta.
  
  
 ## Lähteet
