--- a/H10.md
+++ b/H10.md
@@ -81,7 +81,7 @@ Ja aloitin uuden projektin komennolla:
 
     $ django-admin startproject idea
     
-Vaihdoin uuden projectin hakemistoon komennolla:
+Vaihdoin uuden projektin hakemistoon komennolla:
 
     $ cd idea
     
