--- a/H10.md
+++ b/H10.md
@@ -105,7 +105,7 @@ Kehitysserveri on tominnassa. Päivitin seuraavaksi tietokannat ensin sulkemalla
 ![image](https://user-images.githubusercontent.com/106889187/221502087-a485b27f-e687-4dd5-87c9-9fcbc52a40b1.png)
 
 
-Seuraavaksi asensin pwgen-salasanageneraattorin nopeuttamaan uusien käyttäjien luontia komennolla:
+Seuraavaksi asensin pwgen-salasanageneraattorin komennolla:
 
     $ sudo apt-get install pwgen
       
@@ -113,7 +113,7 @@ Seuraavaksi asensin pwgen-salasanageneraattorin nopeuttamaan uusien käyttäjien
  
     $  pwgen -s 20 1
 
-Tämän jälkeen loin uuden ylläpitäjän komennolla:
+Tämän jälkeen loin uuden ylläpitäjän, hyödyntäen aikaisemmin luotua salasanaa komennolla:
 
     $ ./manage.py createsuperuser
 
