--- a/H10.md
+++ b/H10.md
@@ -1,6 +1,6 @@
 
 # H10 
- Harjoituksen tarkoituksena on luoda tietokantasovellus, jossa on weppiliittymä hyödyntäen Djangon kehityspalvelinta.
+ Harjoituksen tarkoituksena on luoda tietokanta, jossa on weppiliittymä hyödyntäen Djangon kehityspalvelinta.
  
  
 ### Laitteisto
