--- a/H11.md
+++ b/H11.md
@@ -1,5 +1,5 @@
 # H11
- Harjoituksen tarkoituksena on tehdä Djangon tuotantoasennus
+ Harjoituksen tarkoituksena on tehdä Djangon tuotantoasennus.
  
  
 ### Laitteisto
@@ -47,12 +47,46 @@ Seuraavaksi vaihdoin Apachen testisivun komennolla:
  
  ![image](https://user-images.githubusercontent.com/106889187/222386341-53b96707-fbcc-438d-949b-9f3af9507f86.png)
 
+Tämän jälkeen menin kotihakemistoon, loin uuden hakemiston ja lisäsin siihen index.html tiedoston komennoilla:
 
+    $ cd
+    $ mkdir -p publicwsgi/r01p4r/static/
+    $ echo "I see you statically"|tee publicwsgi/r01p4r/static/index.html
 
+![image](https://user-images.githubusercontent.com/106889187/222389325-53d280b8-9040-4529-a34a-7b55e259f3dc.png)
 
+ Seuraavaksi lisäsin uuden VirtualHostin sudoeditillä, käyttäen komentoa:
+ 
+    $ sudoedit /etc/apache2/sites-available/r01p4r.conf
+    
+![image](https://user-images.githubusercontent.com/106889187/222390982-0ad6bd30-2a6e-4255-bba8-dd70bd5141fa.png)
+
+Seuraavaksi laitoin uuden luomani nettisivun päälle ja otin testisivun pois päältä komennoilla:
+
+    $ sudo a2ensite r01p4r.conf
+    $ sudo a2dissite 000-default.conf 
+    
+![image](https://user-images.githubusercontent.com/106889187/222391599-5b750d00-5092-4887-be50-cfc79336118e.png)
+
+Tämän jälkeen tein konfiguraatio-testin komennolla:
+
+    $ /sbin/apache2ctl configtest
+    
+![image](https://user-images.githubusercontent.com/106889187/222392057-05daab4f-42e6-43bd-9354-bb2d4c1a81ff.png)
+
+Konfiguraatiossa ei ollut ongelmia, (AH00558) viittaa vain ongelmaan julkisen nimen tunnistamisessa.
+
+Seuraavaksi käynnistin Apachen uudestaan komennolla:
+
+    $ sudo systemctl restart apache2
+    
+Ja tarkistin selaimessa, että luotu sisältö tuli näkyviin sivulla
+
+    http://localhost/static/
+  
+  ![image](https://user-images.githubusercontent.com/106889187/222393038-9c04016f-01cf-4774-be0a-3f11aa555e29.png)
 
     
-Seuraavaksi loin uuden kansion virtuaaliympäristön ja liitin siihen viimeisimmät Python paketit komennolla:
 
     $ virtualenv --system-site-packages -p python3 env/
     
