--- a/H11.md
+++ b/H11.md
@@ -15,7 +15,7 @@
 
 
 
-## Kehitysympäristön asentaminen (11:07)
+## Alustus (11:07)
 
 Aloitin harjoituksen päivittämällä paketit ja asentamalla micro-editoriin bash-completionin komennoilla:
 
@@ -86,11 +86,22 @@ Ja tarkistin selaimessa, että luotu sisältö tuli näkyviin sivulla
   
   ![image](https://user-images.githubusercontent.com/106889187/222393038-9c04016f-01cf-4774-be0a-3f11aa555e29.png)
 
-    
 
-    $ virtualenv --system-site-packages -p python3 env/
+## Djangon asentaminen VirtuaEnviin
+
+Olin aikaisemmin asentanut VirtualEnvin komennoilla:
+
+    $ sudo apt-get update
+    $ sudo apt-get -y install virtualenv
     
-![image](https://user-images.githubusercontent.com/106889187/221125515-27817450-2c59-4d18-a6f1-991cdb600842.png)
+Joten siirryin hakemistoon 'publicwsgi' ja loin sinne uuden virtuaaliympäristön komennoilla:
+
+    $ cd 
+    $ cd publicwsgi/
+    $ virtualenv -p python3 --system-site-packages env
+    
+![image](https://user-images.githubusercontent.com/106889187/222396203-f62dc0e5-5119-4ce1-b702-2d05bf796d5e.png)
+
 
 Tämän jälkeen aktivoin uuden virtuaaliympäristön komennolla:
 
@@ -99,24 +110,23 @@ Tämän jälkeen aktivoin uuden virtuaaliympäristön komennolla:
  Ja tarkistin, että paketit tullaan asentamaan virtuaaliympäristöön komennolla:
  
     $ which pip
+    
+ ![image](https://user-images.githubusercontent.com/106889187/222396393-78558381-d2fd-4418-bf76-4e3919ca7b0f.png)
 
-Tämän jälkeen asensin micro-tekstieditorin ja listasin sen avulla Django paketin tekstitiedostona komennoilla:
 
-    $ sudo apt-get install micro
+Tämän jälkeen listasin micro-editorilla avulla Django paketin tekstitiedostona komennoilla:
+
     $ micro requirements.txt 
     
  Lisäsin tekstitiedostoon sisälle 'django'.
-    
- ![image](https://user-images.githubusercontent.com/106889187/221127206-f2077b4d-23c5-4b51-b519-66ca028204b3.png)
-  
+
+  ![image](https://user-images.githubusercontent.com/106889187/222396975-bec0ff74-a113-4750-ac70-3095667362a5.png)
+
   
 Tarkistin tiedoston onnistuneen luomisen komennolla:
  
     $ cat requirements.txt
     
-    
-![image](https://user-images.githubusercontent.com/106889187/221127433-86dbbb8f-37db-479f-aa22-4b2e9f13e2d1.png)
-
 Seuraavaksi asensin Djangon hyödyntäen tekstitiedostoa komennolla:
 
     $ pip install -r requirements.txt
@@ -125,7 +135,8 @@ Lopuksi tarkistin Djangon asentumisen ja version komennolla:
 
     $ django-admin --version
   
-![image](https://user-images.githubusercontent.com/106889187/221127908-0e4e9cbd-aafb-4284-b7cd-0ac5f4c28dd3.png)
+
+![image](https://user-images.githubusercontent.com/106889187/222397309-e8f0219d-0741-4c13-9be8-e8962cf672a1.png)
 
 
   
