--- a/H11.md
+++ b/H11.md
@@ -114,7 +114,7 @@ Tämän jälkeen aktivoin uuden virtuaaliympäristön komennolla:
  ![image](https://user-images.githubusercontent.com/106889187/222396393-78558381-d2fd-4418-bf76-4e3919ca7b0f.png)
 
 
-Tämän jälkeen listasin micro-editorilla avulla Django paketin tekstitiedostona komennoilla:
+Tämän jälkeen listasin micro-editorilla Django-paketin tekstitiedostona komennolla:
 
     $ micro requirements.txt 
     
@@ -143,153 +143,90 @@ Lopuksi tarkistin Djangon asentumisen ja version komennolla:
   
    
 
-## DJANGO (9:21 -- 27.2.2023)
+## DJANGO (12:07)
 
-Aluksi siirryin aikaisemmin luotuun virtuaaliympäristöön komennolla:
+Aloitin uuden projektin komennolla:
 
-    $ source env/bin/activate
+    $ django-admin startproject rojekt
 
-![image](https://user-images.githubusercontent.com/106889187/221499957-02dc91dc-b5e1-430d-85c9-e2b4df316b8c.png)
+Ja siirryin määrittämään uuden sivuston Apache-konfiguraatiota komennolla:
+
+    $ sudoedit /etc/apache2/sites-available/rojekt.conf
+    
+![image](https://user-images.githubusercontent.com/106889187/222431072-40d22c5a-c8f3-4d06-a727-9d99113eb8fc.png)
+
+
+
+
+Seuraavaksi asensin Apacheen WSGI-moduulin komennolla:
+
+    $ sudo apt-get -y install libapache2-mod-wsgi-py3
+
+Asennuksen jälkeen tarkistin syntaksin komennolla:
+
+    $ /sbin/apache2ctl configtest
+
+![image](https://user-images.githubusercontent.com/106889187/222405682-d8d8e49f-3416-4647-9bf0-b57061b8c766.png)
+
+Syntaksi oli ok.
+
+Sitten käynnistin Apachen uudestaan ja testaamalla sivuston komennoilla:
+
+    $ sudo systemctl restart apache2
+    $ curl -s localhost|grep title
+    
+ ![image](https://user-images.githubusercontent.com/106889187/222436030-17f1f496-8c4a-4fa7-a368-a2bb7d39ea67.png)
+
+Tarkistin myös että palvelin oli Apache komennolla:
+
+    $ curl -sI localhost|grep Server
+    
+![image](https://user-images.githubusercontent.com/106889187/222436279-b0ec2019-fda8-451c-a808-6cdb0bba595b.png)
+
+Palvelin oli Apachen.
+
+## Debugin poisto (15:06)
+
+Poistin Debug-ominaisuuden käytöstä muokkaamalla settings.py tiedostoa komennoilla:
+
+    $ cd
+    $ cd publicwsgi/rojekt/
+    $ micro rojekt/settings.py 
+
+Ja muokkaamalla kohdat:
+
+    DEBUG = False
+    ALLOWED_HOSTS = ["localhost"]
+    
+ Päivitin asetukset komennoilla:
  
-Ja aloitin uuden projektin komennolla:
-
-    $ django-admin startproject idea
+    $ touch teroco/wsgi.py
+    $ sudo systemctl restart apache2
     
-Vaihdoin uuden projektin hakemistoon komennolla:
+Tämän jälkeen kävin localhost-sivulla selaimessa ja komennolla:
 
-    $ cd idea
+    $ curl -s localhost|grep title
     
-Ja suoritin seuraavan komennon aloittaakseni kehitysserverin:
 
-    $ ./manage.py runserver
-    
-Sain seuraavanlaisen viestin, joka kertoo tietokantojen päivittämisen tarpeesta. 
+![image](https://user-images.githubusercontent.com/106889187/222440012-ad0c371f-7107-45d4-a458-f8412df815cb.png)
 
-  ![image](https://user-images.githubusercontent.com/106889187/221500795-8b58fa6b-d7ff-441d-8914-91a29986d476.png)
+![image](https://user-images.githubusercontent.com/106889187/222440230-d337c8f5-cd62-4336-96eb-e63514a47e4d.png)
+
+Ja sain odotetusti error-viestin, sillä en ollut määritelly vielä sinne mitään.
+
+Osoite 'localhost/admin' toimi ja pääsin kirjautumaan sisään.
+
+![image](https://user-images.githubusercontent.com/106889187/222441033-03b9587b-89b9-49bb-88b0-9248a2d601a7.png)
+
+
+
   
-Tarkistetaan ensin, että kehitysserveri toimii selaimessa.
 
-![image](https://user-images.githubusercontent.com/106889187/221501460-59d71fbd-17c0-4ec7-a0d6-3e320e30b1bd.png)
-
-Kehitysserveri on tominnassa. Päivitin seuraavaksi tietokannat ensin sulkemalla serverin komennolla 'CONTROL-C' ja sen jälkeen komennoilla:
-
-    $ ./manage.py makemigrations
-    $ ./manage.py migrate
-
-![image](https://user-images.githubusercontent.com/106889187/221502087-a485b27f-e687-4dd5-87c9-9fcbc52a40b1.png)
-
-
-Seuraavaksi asensin pwgen-salasanageneraattorin komennolla:
-
-    $ sudo apt-get install pwgen
-      
- Loin yhden uuden satunnaisen ja 20-merkkisen salasanan komennolla:
- 
-    $  pwgen -s 20 1
-
-Tämän jälkeen loin uuden ylläpitäjän, hyödyntäen aikaisemmin luotua salasanaa komennolla:
-
-    $ ./manage.py createsuperuser
-
-![image](https://user-images.githubusercontent.com/106889187/221504426-b880e244-c578-4ca4-8a2e-550dd7e66321.png)
-
-Seuraavaksi käynnistin kehitysserverin uudestaan komennolla:
-
-    $ ./manage.py runserver
-    
-Ja siirryin ylläpitäjän sivuille lisäämällä osoitteeseen loppuun '/admin'.
-
-![image](https://user-images.githubusercontent.com/106889187/221504964-894fd8c3-87d4-4599-95d9-8c46c46f657f.png)
-
-Kirjauduin sisään onnistuneesti luomillani ylläpitäjän tunnuksilla.
-
-![image](https://user-images.githubusercontent.com/106889187/221505263-0b046166-48b6-4fe1-838e-bf24b487f149.png)
-
-Tämän jälkeen loin ylläpitäjänä vielä yhden uuden käyttäjän 'red2' ja annoin sille staff- ja superuser-oikeudet.
-
-![image](https://user-images.githubusercontent.com/106889187/221506799-43e3567c-c20d-4879-859d-fe3f0eaf82b5.png)
-
-Onnistuin kirjautumaan sisään uudella käyttäjällä '/admin' osoitteen kautta.
-
-## Tietokanta (10:02 -- 27.2.2023)
-
-Aloitin tietokannan luomisen virtuaaliympäristöön luomalla kansion 'students' komennolla:
-
-    $ ./manage.py startapp students
-    
-Tämän jälkeen avasin micro-editorilla 'settings.py' tiedoston  komennolla:
-
-    $ micro idea/settings.py
-    
- Ja lisäsin 'INSTALLED_APPS' kohtaan 'students'.
- 
- ![image](https://user-images.githubusercontent.com/106889187/221513105-48cfdd83-3533-4fb7-b51c-5e02a1e90cdf.png)
-
-Seuraavaksi siirryin lisäämän malleja tietokannalle käyttäen micro-editoria komenolla:
-
-    $ micro students/models.py
- 
-Lisäsin luokan 'student', joka sisältää attribuutit 'name', 'age' ja 'language'.
-
-![image](https://user-images.githubusercontent.com/106889187/221525431-bdb4b92c-fb76-4754-b43a-314df440eed4.png)
-
-
-
-
-
-Tämän jälkeen päivitin tietokannat komennoilla:
-
-    $ ./manage.py makemigrations
-    $ ./manage.py migrate
-    
   
- 
- Seuraavaksi rekisteröin tietokannan muokkaamalla 'students/admin.py' tiedostoa käyttäen micro-editoria komennolla:
- 
-    $ micro students/admin.py
-    
- Ja muokkaamalla tiedostoa seuraavanlaisesti:
- 
-    from django.contrib import admin
-    from . import models
-    # Register your models here.
-    admin.site.register(models.student)
- 
-![image](https://user-images.githubusercontent.com/106889187/221526583-30524ee6-17a8-454f-916f-b50b8ea1992e.png)
-
-
-
- Seuraavaksi tarkistin uuden tietokannan tomimivuuden ja muokattavuuden selaimessa käyttäjällä 'red2' ensiksi käynnistämällä kehitysserverin komennolla:
- 
-    $ ./manage.py runserver
- 
-Ja siirtymällä kirjautumaan osoitteessa:
-
-    http://127.0.0.1:8000/admin/
+## (15:11)  
   
-Kirjautuminen onnistui ja pääsin muokkaamaan luomaani tietokantaa.
 
-![image](https://user-images.githubusercontent.com/106889187/221526839-d093666a-d377-4500-8fa5-af9b060a13db.png)
-
-![image](https://user-images.githubusercontent.com/106889187/221527204-638c14b2-122d-43ca-973f-f0f80967da2c.png)
-
-Seuraavaksi vaihdoin listatut tiedot objekteista nimiksi avaamalla micro-editorilla tiedoston 'models.py' komennolla:
-
-    $ micro students/models.py
     
-Ja lisäämällä loppuun:
-
-        def __str__(self):		
-        return self.name	
-        
- ![image](https://user-images.githubusercontent.com/106889187/221528405-28fd05c0-c5f8-4b0d-98b3-cf1f283835fc.png)
-
-Tarkistin vielä kehitysserverissä muutosten toimivuuden ja oppilaat listautuivat nyt nimien mukaan.
-
-![image](https://user-images.githubusercontent.com/106889187/221528517-9fe20de8-bfce-4ffc-90f6-63271b83f91a.png)
-
-
-
  ## Lopuksi 
  
  Tässä harjoituksessa loin tietokannan, missä oli weppiliittymä hyödyntäen Djangon kehityspalvelinta.
@@ -305,4 +242,4 @@ Django 4 Instant Customer Database Tutoria, Tero Karvinen - 13.2.2022 (https://t
 
 
 
-#### Tehnyt Roi Partanen (24.2.2023 ja 27.2.2023)
+#### Tehnyt Roi Partanen (2.3.2023)
