--- a/H11.md
+++ b/H11.md
@@ -17,7 +17,7 @@
 
 ## Alustus (11:07)
 
-Aloitin harjoituksen päivittämällä paketit ja asentamalla micro-editoriin bash-completionin komennoilla:
+Aloitin harjoituksen päivittämällä paketit ja asentamalla micro-editoriin bash-completionin, sekä ottamalla sen käyttöön komennoilla:
 
     $ sudo apt-get update
     $  sudo apt-get -y install micro bash-completion
@@ -26,7 +26,7 @@ Aloitin harjoituksen päivittämällä paketit ja asentamalla micro-editoriin ba
   ![image](https://user-images.githubusercontent.com/106889187/222387971-72c2675c-652f-4ffa-80d0-dbe109db4539.png)
   
     
-  Sitten tarkistin että Apache 2 on asennettuna komennolla:
+  Sitten tarkistin että Apache2 on asennettuna komennolla:
  
     
     $ sudo systemctl status apache2
@@ -50,23 +50,22 @@ Seuraavaksi vaihdoin Apachen testisivun komennolla:
 Tämän jälkeen menin kotihakemistoon, loin uuden hakemiston ja lisäsin siihen index.html tiedoston komennoilla:
 
     $ cd
-    $ mkdir -p publicwsgi/r01p4r/static/
-    $ echo "I see you statically"|tee publicwsgi/r01p4r/static/index.html
+    $ mkdir -p publicwsgi/rojekt/static/
+    $ echo "I see you statically"|tee publicwsgi/rojekt/static/index.html
 
 ![image](https://user-images.githubusercontent.com/106889187/222389325-53d280b8-9040-4529-a34a-7b55e259f3dc.png)
 
  Seuraavaksi lisäsin uuden VirtualHostin sudoeditillä, käyttäen komentoa:
  
-    $ sudoedit /etc/apache2/sites-available/r01p4r.conf
+    $ sudoedit /etc/apache2/sites-available/rojekt.conf
     
 ![image](https://user-images.githubusercontent.com/106889187/222390982-0ad6bd30-2a6e-4255-bba8-dd70bd5141fa.png)
 
-Seuraavaksi laitoin uuden luomani nettisivun päälle ja otin testisivun pois päältä komennoilla:
+Seuraavaksi laitoin uuden, äskettäin luomani nettisivun päälle ja otin testisivun pois päältä komennoilla:
 
-    $ sudo a2ensite r01p4r.conf
+    $ sudo a2ensite rojekt.conf
     $ sudo a2dissite 000-default.conf 
     
-![image](https://user-images.githubusercontent.com/106889187/222391599-5b750d00-5092-4887-be50-cfc79336118e.png)
 
 Tämän jälkeen tein konfiguraatio-testin komennolla:
 
@@ -80,7 +79,7 @@ Seuraavaksi käynnistin Apachen uudestaan komennolla:
 
     $ sudo systemctl restart apache2
     
-Ja tarkistin selaimessa, että luotu sisältö tuli näkyviin sivulla
+Ja tarkistin selaimessa, että luotu sisältö tuli näkyviin sivulla:
 
     http://localhost/static/
   
@@ -111,7 +110,7 @@ Tämän jälkeen aktivoin uuden virtuaaliympäristön komennolla:
  
     $ which pip
     
- ![image](https://user-images.githubusercontent.com/106889187/222396393-78558381-d2fd-4418-bf76-4e3919ca7b0f.png)
+
 
 
 Tämän jälkeen listasin micro-editorilla Django-paketin tekstitiedostona komennolla:
@@ -219,24 +218,55 @@ Osoite 'localhost/admin' toimi ja pääsin kirjautumaan sisään.
 ![image](https://user-images.githubusercontent.com/106889187/222441033-03b9587b-89b9-49bb-88b0-9248a2d601a7.png)
 
 
+## Staattiset tiedostot (15:20)  
+  
+Aloitin siirtymällä muokkaamaan setting.py-tiedosta micro-editorilla käyttäen komentoja:
 
-  
+    $ cd
+    $ cd publicwsgi/rojekt/
+    $ micro rojekt/settings.py
+ 
+Ja lisäsin tiedoston alkuun: 
 
-  
-## (15:11)  
-  
+    import os
+    
+Staattisten tiedostojen juuren määritelmän:
+ 
+    STATIC_ROOT = os.path.join(BASE_DIR, 'static/')
+    
+Lisäsin rivin: 
+ 
+    STATIC_URL = 'static/'
+        
+ alapuolelle.
+
+![image](https://user-images.githubusercontent.com/106889187/222444715-f477412f-3e36-4f90-9108-fb6ab1d4caad.png)
+
+![image](https://user-images.githubusercontent.com/106889187/222444762-730520a0-5c81-435c-9c7d-3d5440af70ff.png)
+
+
+
+Seuraavaksi päivitin uudet asetukset komennolla:
+
+    $ ./manage.py collectstatic
+
+![image](https://user-images.githubusercontent.com/106889187/222445158-affe9b9c-5d5b-4dfb-a885-3272a4dc6aaa.png)
+
+Kävin selaimella osoitteessaa 'localhost/admin' ja muutokset olivat tulleet voimaan.
+
+![image](https://user-images.githubusercontent.com/106889187/222445422-376b8f0d-21ee-4da6-99d4-3edaa94d1a6b.png)
 
     
  ## Lopuksi 
  
- Tässä harjoituksessa loin tietokannan, missä oli weppiliittymä hyödyntäen Djangon kehityspalvelinta.
+ Tässä harjoituksessa tein Djangon tuotantoasennuksen.
  
  
 ## Lähteet
 
 Linux Palvelimet 2023 alkukevät, Tero Karvinen (https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/)
 
-Django 4 Instant Customer Database Tutoria, Tero Karvinen - 13.2.2022 (https://terokarvinen.com/2022/django-instant-crm-tutorial/)
+Deploy Django 4 - Production Install Tero Karvinen - 13.2.2022 (https://terokarvinen.com/2022/deploy-django/)
 
 
 
