--- a/H11.md
+++ b/H11.md
@@ -53,15 +53,13 @@ Tämän jälkeen menin kotihakemistoon, loin uuden hakemiston ja lisäsin siihen
     $ mkdir -p publicwsgi/rojekt/static/
     $ echo "I see you statically"|tee publicwsgi/rojekt/static/index.html
 
-![image](https://user-images.githubusercontent.com/106889187/222389325-53d280b8-9040-4529-a34a-7b55e259f3dc.png)
 
  Seuraavaksi lisäsin uuden VirtualHostin sudoeditillä, käyttäen komentoa:
  
     $ sudoedit /etc/apache2/sites-available/rojekt.conf
     
-![image](https://user-images.githubusercontent.com/106889187/222390982-0ad6bd30-2a6e-4255-bba8-dd70bd5141fa.png)
 
-Seuraavaksi laitoin uuden, äskettäin luomani nettisivun päälle ja otin testisivun pois päältä komennoilla:
+Sitten laitoin uuden, äskettäin luomani nettisivun päälle ja otin testisivun pois päältä komennoilla:
 
     $ sudo a2ensite rojekt.conf
     $ sudo a2dissite 000-default.conf 
@@ -86,7 +84,7 @@ Ja tarkistin selaimessa, että luotu sisältö tuli näkyviin sivulla:
   ![image](https://user-images.githubusercontent.com/106889187/222393038-9c04016f-01cf-4774-be0a-3f11aa555e29.png)
 
 
-## Djangon asentaminen VirtuaEnviin
+## Djangon asentaminen VirtuaEnviin (11:43)
 
 Olin aikaisemmin asentanut VirtualEnvin komennoilla:
 
@@ -134,12 +132,6 @@ Lopuksi tarkistin Djangon asentumisen ja version komennolla:
 
     $ django-admin --version
   
-
-![image](https://user-images.githubusercontent.com/106889187/222397309-e8f0219d-0741-4c13-9be8-e8962cf672a1.png)
-
-
-  
-  
    
 
 ## DJANGO (12:07)
@@ -182,7 +174,7 @@ Tarkistin myös että palvelin oli Apache komennolla:
     
 ![image](https://user-images.githubusercontent.com/106889187/222436279-b0ec2019-fda8-451c-a808-6cdb0bba595b.png)
 
-Palvelin oli Apachen.
+Palvelin oli Apache.
 
 ## Debugin poisto (15:06)
 
@@ -199,7 +191,7 @@ Ja muokkaamalla kohdat:
     
  Päivitin asetukset komennoilla:
  
-    $ touch teroco/wsgi.py
+    $ touch rojekt/wsgi.py
     $ sudo systemctl restart apache2
     
 Tämän jälkeen kävin localhost-sivulla selaimessa ja komennolla:
@@ -213,7 +205,7 @@ Tämän jälkeen kävin localhost-sivulla selaimessa ja komennolla:
 
 Ja sain odotetusti error-viestin, sillä en ollut määritelly vielä sinne mitään.
 
-Osoite 'localhost/admin' toimi ja pääsin kirjautumaan sisään.
+Osoite 'localhost/admin' toimi.
 
 ![image](https://user-images.githubusercontent.com/106889187/222441033-03b9587b-89b9-49bb-88b0-9248a2d601a7.png)
 
@@ -230,6 +222,8 @@ Ja lisäsin tiedoston alkuun:
 
     import os
     
+![image](https://user-images.githubusercontent.com/106889187/222444715-f477412f-3e36-4f90-9108-fb6ab1d4caad.png)
+    
 Staattisten tiedostojen juuren määritelmän:
  
     STATIC_ROOT = os.path.join(BASE_DIR, 'static/')
@@ -240,7 +234,7 @@ Lisäsin rivin:
         
  alapuolelle.
 
-![image](https://user-images.githubusercontent.com/106889187/222444715-f477412f-3e36-4f90-9108-fb6ab1d4caad.png)
+
 
 ![image](https://user-images.githubusercontent.com/106889187/222444762-730520a0-5c81-435c-9c7d-3d5440af70ff.png)
 
