--- a/H12.md
+++ b/H12.md
@@ -1,6 +1,5 @@
- H11
- Harjoituksen tarkoituksena on tehdä Djangon tuotantoasennus.
- 
+ #H12
+ Harjoituksen tarkoituksena on aiheuttaa ja tutkia onglemia Djangon tuotantotyyppisessä asennuksessa.
  
 ### Laitteisto
  
@@ -15,22 +14,35 @@
 
 
 
-## Alustus (11:07)
+## Alustus (11:54)
 
-Aloitin harjoituksen päivittämällä paketit ja asentamalla micro-editoriin bash-completionin, sekä ottamalla sen käyttöön komennoilla:
+Aloitin harjoituksen tarkistamalla, että Djangon tuotantoasennus toimii odetetulla tavalla.
 
-    $ sudo apt-get update
-    $  sudo apt-get -y install micro bash-completion
-    $ export EDITOR=micro
     
-  ![image](https://user-images.githubusercontent.com/106889187/222387971-72c2675c-652f-4ffa-80d0-dbe109db4539.png)
-  
+Aloitin siirtymällä viime tehtävässä luotuun publicswgi kansioon ja ja käynnistämällä virtuaaliympäristön komennoilla:
+
+
+    $ cd publicswgi
+    $ source env/bin/activate
     
-  Sitten tarkistin että Apache2 on asennettuna komennolla:
+Tarkistin seuraavaksi Apachen statuksen komennolla:
+
+    $ sudo systemctl apache2
+    
+ ![image](https://user-images.githubusercontent.com/106889187/223078157-0d051dde-5454-4e3a-8322-5e49781e76e4.png)
+
+ Apache oli käynnissä. Tein myös konfiguraatiotestin komenolla:
  
-    
-    $ sudo systemctl status apache2
+ 
+    $ /sbin/apache2ctl configtest
+  
+  
+  ![image](https://user-images.githubusercontent.com/106889187/223078771-a95362df-de21-413b-b2fc-72ffc1ff7dbc.png)
+  
+  Syntaksi oli OK.
 
+    
+  S
     
  ![image](https://user-images.githubusercontent.com/106889187/222384836-51eb6bca-4905-4220-a176-1da026700bf8.png)
 
