--- a/H12.md
+++ b/H12.md
@@ -42,230 +42,40 @@ Tarkistin seuraavaksi Apachen statuksen komennolla:
   Syntaksi oli OK.
 
     
-  S
-    
- ![image](https://user-images.githubusercontent.com/106889187/222384836-51eb6bca-4905-4220-a176-1da026700bf8.png)
-
-Apache on asennettuna ja käynnissä. Kävin vielä selaimessa localhost-sivulla ja sain Apachen testisivun auki.
-
-![image](https://user-images.githubusercontent.com/106889187/222385172-2af004a5-f10d-4de7-9c69-e73f5d879ca3.png)
-
-
-Seuraavaksi vaihdoin Apachen testisivun komennolla:
-
-    $ echo "new page"|sudo tee /var/www/html/index.html
-    
- Ja tarkistin selaimessa, että sivu oli muutettu.
- 
- ![image](https://user-images.githubusercontent.com/106889187/222386341-53b96707-fbcc-438d-949b-9f3af9507f86.png)
-
-Tämän jälkeen menin kotihakemistoon, loin uuden hakemiston ja lisäsin siihen index.html tiedoston komennoilla:
-
-    $ cd
-    $ mkdir -p publicwsgi/rojekt/static/
-    $ echo "I see you statically"|tee publicwsgi/rojekt/static/index.html
-
-
- Seuraavaksi lisäsin uuden VirtualHostin sudoeditillä, käyttäen komentoa:
- 
-    $ sudoedit /etc/apache2/sites-available/rojekt.conf
-    
-
-Sitten laitoin uuden, äskettäin luomani nettisivun päälle ja otin testisivun pois päältä komennoilla:
-
-    $ sudo a2ensite rojekt.conf
-    $ sudo a2dissite 000-default.conf 
-    
-
-Tämän jälkeen tein konfiguraatio-testin komennolla:
-
-    $ /sbin/apache2ctl configtest
-    
-![image](https://user-images.githubusercontent.com/106889187/222392057-05daab4f-42e6-43bd-9354-bb2d4c1a81ff.png)
-
-Konfiguraatiossa ei ollut ongelmia, (AH00558) viittaa vain ongelmaan julkisen nimen tunnistamisessa.
-
-Seuraavaksi käynnistin Apachen uudestaan komennolla:
-
-    $ sudo systemctl restart apache2
-    
-Ja tarkistin selaimessa, että luotu sisältö tuli näkyviin sivulla:
-
-    http://localhost/static/
+  Seuraavaksi kävin selaimessa osoitteissa:
   
-  ![image](https://user-images.githubusercontent.com/106889187/222393038-9c04016f-01cf-4774-be0a-3f11aa555e29.png)
-
-
-## Djangon asentaminen VirtuaEnviin (11:43)
-
-Olin aikaisemmin asentanut VirtualEnvin komennoilla:
-
-    $ sudo apt-get update
-    $ sudo apt-get -y install virtualenv
-    
-Joten siirryin hakemistoon 'publicwsgi' ja loin sinne uuden virtuaaliympäristön komennoilla:
-
-    $ cd 
-    $ cd publicwsgi/
-    $ virtualenv -p python3 --system-site-packages env
-    
-![image](https://user-images.githubusercontent.com/106889187/222396203-f62dc0e5-5119-4ce1-b702-2d05bf796d5e.png)
-
-
-Tämän jälkeen aktivoin uuden virtuaaliympäristön komennolla:
-
-    $ source env/bin/activate
-    
- Ja tarkistin, että paketit tullaan asentamaan virtuaaliympäristöön komennolla:
- 
-    $ which pip
-    
-
-
-
-Tämän jälkeen listasin micro-editorilla Django-paketin tekstitiedostona komennolla:
-
-    $ micro requirements.txt 
-    
- Lisäsin tekstitiedostoon sisälle 'django'.
-
-  ![image](https://user-images.githubusercontent.com/106889187/222396975-bec0ff74-a113-4750-ac70-3095667362a5.png)
-
+      localhost
+      localhost/admin
+      
+  Localhost-sivustolla ei olla luotu sisältöä, niin se näyttää 'Not Found'-ilmoitusta.
   
-Tarkistin tiedoston onnistuneen luomisen komennolla:
- 
-    $ cat requirements.txt
-    
-Seuraavaksi asensin Djangon hyödyntäen tekstitiedostoa komennolla:
+  ![image](https://user-images.githubusercontent.com/106889187/223081647-0c97b163-8c5b-4390-a6a8-73ec16da30b3.png)
 
-    $ pip install -r requirements.txt
-
-Lopuksi tarkistin Djangon asentumisen ja version komennolla:
-
-    $ django-admin --version
+      
+ Localhost/admin-sivusto latautui onnistuneesti.
   
-   
-
-## DJANGO (12:07)
-
-Aloitin uuden projektin komennolla:
-
-    $ django-admin startproject rojekt
-
-Ja siirryin määrittämään uuden sivuston Apache-konfiguraatiota komennolla:
-
-    $ sudoedit /etc/apache2/sites-available/rojekt.conf
-    
-![image](https://user-images.githubusercontent.com/106889187/222431072-40d22c5a-c8f3-4d06-a727-9d99113eb8fc.png)
-
-
-
-
-Seuraavaksi asensin Apacheen WSGI-moduulin komennolla:
-
-    $ sudo apt-get -y install libapache2-mod-wsgi-py3
-
-Asennuksen jälkeen tarkistin syntaksin komennolla:
-
-    $ /sbin/apache2ctl configtest
-
-![image](https://user-images.githubusercontent.com/106889187/222405682-d8d8e49f-3416-4647-9bf0-b57061b8c766.png)
-
-Syntaksi oli ok.
-
-Sitten käynnistin Apachen uudestaan ja testaamalla sivuston komennoilla:
-
-    $ sudo systemctl restart apache2
-    $ curl -s localhost|grep title
-    
- ![image](https://user-images.githubusercontent.com/106889187/222436030-17f1f496-8c4a-4fa7-a368-a2bb7d39ea67.png)
-
-Tarkistin myös että palvelin oli Apache komennolla:
-
-    $ curl -sI localhost|grep Server
-    
-![image](https://user-images.githubusercontent.com/106889187/222436279-b0ec2019-fda8-451c-a808-6cdb0bba595b.png)
-
-Palvelin oli Apache.
-
-## Debugin poisto (15:06)
-
-Poistin Debug-ominaisuuden käytöstä muokkaamalla settings.py tiedostoa komennoilla:
-
-    $ cd
-    $ cd publicwsgi/rojekt/
-    $ micro rojekt/settings.py 
-
-Ja muokkaamalla kohdat:
-
-    DEBUG = False
-    ALLOWED_HOSTS = ["localhost"]
-    
- Päivitin asetukset komennoilla:
- 
-    $ touch rojekt/wsgi.py
-    $ sudo systemctl restart apache2
-    
-Tämän jälkeen kävin localhost-sivulla selaimessa ja komennolla:
-
-    $ curl -s localhost|grep title
-    
-
-![image](https://user-images.githubusercontent.com/106889187/222440012-ad0c371f-7107-45d4-a458-f8412df815cb.png)
-
-![image](https://user-images.githubusercontent.com/106889187/222440230-d337c8f5-cd62-4336-96eb-e63514a47e4d.png)
-
-Ja sain odotetusti error-viestin, sillä en ollut määritelly vielä sinne mitään.
-
-Osoite 'localhost/admin' toimi.
-
-![image](https://user-images.githubusercontent.com/106889187/222441033-03b9587b-89b9-49bb-88b0-9248a2d601a7.png)
-
-
-## Staattiset tiedostot (15:20)  
+  ![image](https://user-images.githubusercontent.com/106889187/223079493-04c078cb-422a-4ae2-9135-72b22872492c.png)
   
-Aloitin siirtymällä muokkaamaan setting.py-tiedosta micro-editorilla käyttäen komentoja:
-
-    $ cd
-    $ cd publicwsgi/rojekt/
-    $ micro rojekt/settings.py
+  Tarkistin myös, että sivusto pyöri Apachella komennolla:
+  
+     $ curl -sI localhost|grep Server
+     
+  ![image](https://user-images.githubusercontent.com/106889187/223079854-745a0a9c-ea28-4fc0-b9b5-af5ca7b28f2e.png)
+  
+ Kävin katsomassa myös Apachen error-lokeja ja niistä ei löytynyt mitään vikaa.
  
-Ja lisäsin tiedoston alkuun: 
-
-    import os
-    
-![image](https://user-images.githubusercontent.com/106889187/222444715-f477412f-3e36-4f90-9108-fb6ab1d4caad.png)
-    
-Staattisten tiedostojen juuren määritelmän:
  
-    STATIC_ROOT = os.path.join(BASE_DIR, 'static/')
-    
-Lisäsin rivin: 
+  
+![image](https://user-images.githubusercontent.com/106889187/223080794-2a797e90-87e7-4954-bf2c-c39c8756f5a9.png)
+
+
+## Kirjoitusvirhe Python-tiedostossa (12:12)
+Luodaan kirjoitusvirhe Python-tiedostoon ja 
  
-    STATIC_URL = 'static/'
-        
- alapuolelle.
-
-
-
-![image](https://user-images.githubusercontent.com/106889187/222444762-730520a0-5c81-435c-9c7d-3d5440af70ff.png)
-
-
-
-Seuraavaksi päivitin uudet asetukset komennolla:
-
-    $ ./manage.py collectstatic
-
-![image](https://user-images.githubusercontent.com/106889187/222445158-affe9b9c-5d5b-4dfb-a885-3272a4dc6aaa.png)
-
-Kävin selaimella osoitteessaa 'localhost/admin' ja muutokset olivat tulleet voimaan.
-
-![image](https://user-images.githubusercontent.com/106889187/222445422-376b8f0d-21ee-4da6-99d4-3edaa94d1a6b.png)
-
     
  ## Lopuksi 
  
- Tässä harjoituksessa tein Djangon tuotantoasennuksen.
+ Tässä harjoituksessa tein Djangon tuotantoasennuksen vianmääritystä.
  
  
 ## Lähteet
