--- a/H12.md
+++ b/H12.md
@@ -254,6 +254,35 @@ Ja Apachen konfiguraatiotesti, serveri  ja nettisivu toimivat taas odotetusti.
 
 ![image](https://user-images.githubusercontent.com/106889187/223113079-7509c892-fe67-48c9-9ef5-ce1336f094e0.png)
 
+## Väärät domain-nimet (14:41)
+Muutetaan  'settings.py' tiedostoa ja lisätään kohtaan 'ALLOWED_HOSTS' väärät domain-nimet.
+
+Aloitin muokkaamaan 'settings.py'-tiedostoa komennolla:
+
+
+    $ cd publicwsgi
+    $ micro /rojekt/rojekt/settings.py 
+
+Ja muokkasin kohtaa 'ALLOWED_HOSTS' rivillä 32 'localhost' -> 'localshost'
+
+![image](https://user-images.githubusercontent.com/106889187/223116176-87a2170b-69d6-4d6b-98a8-93e0918ac14f.png)
+
+Suoritin tämän jälkeen Apachen konfiguraatiotestin, mikä oli OK ja käynnistin Apachen uudestaan.
+
+Selaimessa 'localhost' antaa nyt seuraavanlaisen viestin:
+
+![image](https://user-images.githubusercontent.com/106889187/223116581-e1e372f0-7741-4b9b-8156-1563c5b4d7d4.png)
+
+Apachen error-lokeissa ei myöskään ollut ilmestynt mitään uutta.
+
+![image](https://user-images.githubusercontent.com/106889187/223116792-816bba3e-f71f-4fdc-b266-776c79dc8ce6.png)
+
+Tarkistin myös Apachen access ja other_vhost-lokit tuloksetta.
+
+![image](https://user-images.githubusercontent.com/106889187/223118036-cfbf72c3-d042-4c8f-9c8f-921ae61ca829.png)
+
+![image](https://user-images.githubusercontent.com/106889187/223118132-aa466c49-6aea-451f-a037-ac8f0ac85e6e.png)
+
 
  
  ## Lopuksi 
@@ -271,4 +300,4 @@ Deploy Django 4 - Production Install Tero Karvinen - 13.2.2022 (https://terokarv
 
 
 
-#### Tehnyt Roi Partanen (2.3.2023)
+#### Tehnyt Roi Partanen (6.3.2023)
