--- a/H12.md
+++ b/H12.md
@@ -19,15 +19,15 @@
 Aloitin harjoituksen tarkistamalla, että Djangon tuotantoasennus toimii odetetulla tavalla.
 
     
-Aloitin siirtymällä viime tehtävässä luotuun publicswgi kansioon ja ja käynnistämällä virtuaaliympäristön komennoilla:
+Aloitin siirtymällä viime tehtävässä luotuun 'publicwsgi'-kansioon ja käynnistämällä virtuaaliympäristön komennoilla:
 
 
-    $ cd publicswgi
+    $ cd publicwsgi
     $ source env/bin/activate
     
 Tarkistin seuraavaksi Apachen statuksen komennolla:
 
-    $ sudo systemctl apache2
+    $ sudo systemctl status apache2
     
  ![image](https://user-images.githubusercontent.com/106889187/223078157-0d051dde-5454-4e3a-8322-5e49781e76e4.png)
 
