--- a/H12.md
+++ b/H12.md
@@ -16,7 +16,7 @@
 
 ## Alustus (11:54)
 
-Aloitin harjoituksen tarkistamalla, että Djangon tuotantoasennus toimii odetetulla tavalla.
+Aloitin harjoituksen tarkistamalla, että Djangon tuotantoasennus toimii odotetulla tavalla.
 
     
 Aloitin siirtymällä viime tehtävässä luotuun 'publicwsgi'-kansioon ja käynnistämällä virtuaaliympäristön komennoilla:
@@ -80,7 +80,7 @@ Ja muutin rivillä 13 'import' -> 'imort'
 
 ![image](https://user-images.githubusercontent.com/106889187/223084181-ba0c5721-6bcc-4047-b12a-ed00ed393cca.png)
 
-Tein Apachen kofniguraatiotestin ja sain syntaksi OK.
+Tein Apachen kofniguraatiotestin ja sain: syntaksi OK.
 
  ![image](https://user-images.githubusercontent.com/106889187/223084905-cd09e8ba-831a-4e25-8014-f3e532639053.png)
 
@@ -112,7 +112,7 @@ Tämän jälkeen käynnistin Apachen uudestaan komennolla
 ## Projektikansio väärässä paikassa (12:48)
 Luodaan uusi kansio ja siirretään Djangon projekti siihen. Tutkitaan ongelmaa.
 
-Loin ensin uuden kansion publicswgi-hakemistoon komennolla:
+Loin ensin uuden kansion publicwsgi-hakemistoon komennolla:
 
     $ mkdir other
     
@@ -283,7 +283,7 @@ Tarkistin myös Apachen access ja other_vhost-lokit tuloksetta.
 
 ![image](https://user-images.githubusercontent.com/106889187/223118132-aa466c49-6aea-451f-a037-ac8f0ac85e6e.png)
 
-
+En onnistunut paikantamaan vikaa lokien tai konfiguraatio-testin avulla, mutta muokattuani 'settings-py'-tiedostoa takaisin aikaisempaan versioon. Kaikki toimi taas odotetusti.
  
  ## Lopuksi 
  
