--- a/H13.md
+++ b/H13.md
@@ -1,5 +1,5 @@
 # H13
- Harjoituksen tarkoituksena on kääntää "Hei Maailma" (Hello World) kolmella eri kielellä. Valitinsin kieliksi Python 3, Bash ja 
+ Harjoituksen tarkoituksena on kääntää "Hei Maailma" (Hello World) kolmella eri kielellä. Valitsin kieliksi Python 3, Bash ja Algol 68
  
 ### Laitteisto
  
@@ -66,7 +66,7 @@ Ja lisäsin sen sisälle:
     
   ![image](https://user-images.githubusercontent.com/106889187/224003945-b74f7054-90c2-4a48-a473-4a2a689cc9c8.png)
   
-  Ajoin koodin komennolla:
+  Ajoin ohjelman komennolla:
   
      $ bash HelloBash.sh
      
